Update examples for GeeCON 2025.